fixed blob errors

--- a/website/sign up.html
+++ b/website/sign up.html
@@ -88,10 +88,6 @@
     </head>
     <body>
         <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
-        <img class="blob2"src="Background.svg"></img>
-        <img class="blob4"src="Blue.svg"></img>
-        <img class="blob3"src="yellow.svg"></img>
-        <img class="blob5"src="Blue.svg"></img>
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
@@ -167,6 +163,11 @@
                         </div>
                         <!-- Collapsible content -->
                         <div class="col-4  header-login">
+                            <!-- Blobs -->
+                            <img class="blob2"src="Background.svg"></img>
+                            <img class="blob4"src="Blue.svg"></img>
+                            <img class="blob3"src="yellow.svg"></img>
+                            <img class="blob5"src="Blue.svg"></img>
                             <!-- Navbar brand -->
                             <button class="navbar-brand" onclick="fadein()">Login</button>
                         </div>
