--- a/website/contact us.html
+++ b/website/contact us.html
@@ -216,9 +216,9 @@
               
                 <div class="container">
                     <div class="row">
-                        <div class="col-3"></div>
-                        <div class="col-9">
-                            <div class="row mt-3">
+                        <div class="col-2"></div>
+                        <div class="col-10">
+                            <div class="row my-5">
                                 <div class="col-lg-3"></div>
                                 <div class="col-lg-6 text-center">
                                     <h1>Contact Us</h1>
