--- a/website/contact us.html
+++ b/website/contact us.html
@@ -216,8 +216,8 @@
               
                 <div class="container">
                     <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-10">
+                        <div class="col-lg-2 col-md-3 col-sm-2"></div>
+                        <div class="col-lg-10 col-md-9 col-sm-10 col-12">
                             <div class="row my-5">
                                 <div class="col-lg-3"></div>
                                 <div class="col-lg-6 text-center">
@@ -227,7 +227,7 @@
                                 <div class="col-lg-3"></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-4 align-self-center">
+                                <div class="col-lg-4 my-lg-1 my-sm-2 my-2 align-self-center">
                                     <div class="card card-rounded card-md card-purple">
                                         <div class="card-body align-content-around">
                                             <h4 class="card-title">Press</h4>
@@ -242,7 +242,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4" style="padding: 0">
+                                <div class="col-lg-4 my-lg-1 my-sm-2 my-2" style="padding: 0">
                                     <div class="card card-rounded card-lg card-purple-dark">
                                         <div class="card-body">
                                             <h4 class="card-title">Help & Support</h4>
@@ -256,7 +256,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 align-self-center">
+                                <div class="col-lg-4 my-lg-1 my-sm-2 my-2 align-self-center">
                                     <div class="card card-rounded card-md card-purple">
                                         <div class="card-body">
                                           <h4 class="card-title">Sales</h4>
