changed send code via email to send

--- a/website/sign up.html
+++ b/website/sign up.html
@@ -117,7 +117,7 @@
                                 </div>
                                 <div class="login-container">
                                     <button type="submit" id="btn-login" class="btn btn-block btn-info btn-login">
-                                        Send Code via Email
+                                        Send
                                     </button>
                                 </div>
                             </form>
