--- a/website/home.html
+++ b/website/home.html
@@ -752,7 +752,7 @@ body {
                             <div class="col-md-6 col-lg-3 col-6">
                                 <div id="card1" class="card bg-light " data-aos="zoom-in-down">
                                         <figure class="imghvr-shutter-out-diag-1">
-                                                <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
+                                                <img class="card-img-top" src="photos/starrynight.jpg" alt="Card image cap">
                                                 <figcaption>
                                                     <p class="img-description">"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p>
                                                 </figcaption>
