anchor forgot pass

--- a/website/home.html
+++ b/website/home.html
@@ -545,7 +545,7 @@
           </div>
           </b>
           <div class="login-container" style="text-align: center">
-            <a id="forgot-pass" onclick="loginForgotToggle()" style="color:black">Forgot Password?</a>
+            <a id="forgot-pass" onclick="loginForgotToggle()" href="javascript:void(0)" style="color:black">Forgot Password?</a>
             <br>Don't have an account? <br> <a id="forgot-pass" href="sign up.html" style="color:black">Sign Up</a>
           </div>
         </div>
