--- a/website/contact us.html
+++ b/website/contact us.html
@@ -127,7 +127,7 @@
         </style>
     </head>
     <body>
-        <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img>
+        <!-- <img class="blob1"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img> -->
         <img class="blob2"src="Background.svg"></img>
         <img class="blob4"src="Blue.svg"></img>
         <img class="blob3"src="yellow.svg"></img>
@@ -214,7 +214,7 @@
                 </div>
                 <!--/.Header-->
               
-                <div class="container">
+                <div class="container px-lg-3 px-md-3 px-0 mb-4">
                     <div class="row">
                         <div class="col-lg-2 col-md-3 col-sm-2"></div>
                         <div class="col-lg-10 col-md-9 col-sm-10 col-12">
@@ -242,7 +242,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 my-lg-1 my-sm-2 my-2" style="padding: 0">
+                                <div class="col-lg-4 my-lg-1 my-sm-2 my-2 px-lg-0">
                                     <div class="card card-rounded card-lg card-purple-dark">
                                         <div class="card-body">
                                             <h4 class="card-title">Help & Support</h4>
