--- a/website/home.html
+++ b/website/home.html
@@ -770,15 +770,15 @@ body {
                                 <div class="col-md-6 col-lg-3 col-6">
                                 <div class="card bg-light" data-aos="zoom-in-down">
                                         <figure class="imghvr-shutter-out-diag-1">
-                                                <img class="card-img-top" src="photos/girlpearl.jpg" alt="Card image cap">
+                                                <img class="card-img-top" src="photos/guernica.jpg" alt="Card image cap">
                                                 <figcaption>
                                                     <p class="img-description">"Lorem ipsum dolor, sit amet consectetur adipisicing elit."</p>
                                                 </figcaption>
                                             </figure>
                                         
                                   <div class="card-body text-center">
-                                        <h4 class="card-title">Girl with a Pearl Earring</h4>
-                                        <p class="card-text">Johannes Vermeer</p>
+                                        <h4 class="card-title">Guernica</h4>
+                                        <p class="card-text">Pablo Picasso</p>
                                     <button class="material-icons" href="#">favorite_border</button>
                                     <button class="material-icons" href="#">chat_bubble_outline</button>
                                     <button class="material-icons" href="#">turned_in_not</button>
@@ -806,15 +806,15 @@ body {
                               <div class="col-md-6 col-lg-3 col-6">
                                 <div class="card bg-light" data-aos="zoom-in-down">
                                         <figure class="imghvr-shutter-out-diag-1">
-                                                <img class="card-img-top" src="photos/designui.jpg" alt="Card image cap">
+                                                <img class="card-img-top" src="photos/persistencememory.jpg" alt="Card image cap">
                                                 <figcaption>
                                                     <p class="img-description">"Lorem ipsum dolor, sit amet consectetur adipisicing elit."</p>
                                                 </figcaption>
                                             </figure>
                                         
                                   <div class="card-body text-center">
-                                        <h4 class="card-title">John Doe</h4>
-                                        <p class="card-text">Vincent Van Gogh</p>
+                                        <h4 class="card-title">The Persistence of Memory</h4>
+                                        <p class="card-text">Salvador Dali</p>
                                     <button class="material-icons" href="#">favorite_border</button>
                                     <button class="material-icons" href="#">chat_bubble_outline</button>
                                     <button class="material-icons" href="#">turned_in_not</button>
