--- a/website/home.html
+++ b/website/home.html
@@ -575,7 +575,7 @@
           </div>
           </b>
           <div class="login-container" style="text-align: center">
-            <br><br><a id="backtoLogin" onclick="loginForgotToggle()" style="color:black">Back to Login</a>
+            <br><br><a id="backtoLogin" onclick="loginForgotToggle()" href="javascript:void(0)" style="color:black">Back to Login</a>
             <br>Don't have an account? <br>
             <a href="sign up.html" style="color:black">Sign Up</a>
           </div>
