--- a/website/sign up.html
+++ b/website/sign up.html
@@ -92,7 +92,7 @@
                         </div>
                         </b>
                         <div class="login-container" style="text-align: center">
-                            <a id="forgot-pass" onclick="loginForgotToggle()" style="color:black">Forgot Password?</a>
+                            <a id="forgot-pass" onclick="loginForgotToggle()" href="javascript:void(0)" style="color:black">Forgot Password?</a>
                             <br>Don't have an account? <br> <a id="forgot-pass" href="sign up.html"
                                 style="color:black">Sign Up</a>
                         </div>
@@ -124,7 +124,7 @@
                         </div>
                         </b>
                         <div class="login-container" style="text-align: center">
-                            <br><br><a id="backtoLogin" onclick="loginForgotToggle()" style="color:black">Back to
+                            <br><br><a id="backtoLogin" onclick="loginForgotToggle()" href="javascript:void(0)" style="color:black">Back to
                                 Login</a>
                             <br>Don't have an account? <br>
                             <a href="sign up.html" style="color:black">Sign Up</a>
