--- a/website/home.html
+++ b/website/home.html
@@ -770,7 +770,7 @@ body {
                                 <div class="col-md-6 col-lg-3 col-6">
                                 <div class="card bg-light" data-aos="zoom-in-down">
                                         <figure class="imghvr-shutter-out-diag-1">
-                                                <img class="card-img-top" src="photos/guernica.jpg" alt="Card image cap">
+                                                <img class="card-img-top" src="photos/girlpearl.jpg alt="Card image cap">
                                                 <figcaption>
                                                     <p class="img-description">"Lorem ipsum dolor, sit amet consectetur adipisicing elit."</p>
                                                 </figcaption>
