--- a/website/about/contact.html
+++ b/website/about/contact.html
@@ -88,25 +88,25 @@
 
 <body>
     <div class="flex">
-        <nav id="sidebar">
-            <ul class="list-unstyled components">
-                <li class="active1">
-                        <a class="material-icons" href="#">home<span class="words">Home</span></a>
-                </li>
-                <li class="active1">
-                        <a class="material-icons" href="#">notifications<span class="words">Notifications</span></a>
-                </li>
-                <li class="active1" >
-                        <a class="material-icons" href="#">bookmarks<span class="words">Bookmarks</span></a>
-                </li>
-                <li class="active1">
-                        <a class="material-icons" href="#">forum<span class="words">Forum</span></a>
-                </li>
-                <li class="active1">
-                        <a class="material-icons" href="#">help_outline<span class="words">Help</span></a>
-                </li>
-            </ul>
-        </nav>  
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Link</a>
+                        </li>    
+                      </ul>
+                    </div>  
+                  </nav>
         <div id="frame">
             <div class = "modl">
                 <button class="exitbutton" onclick=fadeout()>×</button>
