corrections in media query

--- a/website/home.html
+++ b/website/home.html
@@ -662,9 +662,10 @@ body {
                 <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
             </div>
         </form>
-
+        <!-- Login & Signup Buttons -->
         <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
         <a class="navbar-brand" href="sign up.html">Sign Up</a>
+        <!-- Burger Menu Links -->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
