added new nav on html

--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -85,6 +85,36 @@
         </style>
     </head>
     <body>
+        <nav class="navbar navbar-expand-md bg-custom navbar-dark">
+            <!-- Burger Menu Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Search Bar -->
+            <form class="form-inline mr-auto">
+                <div class="md-form my-0 header-search">
+                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                    <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+                </div>
+            </form>
+            <!-- Login & Signup Buttons -->
+            <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
+            <a class="navbar-brand" href="sign up.html">Sign Up</a>
+            <!-- Burger Menu Links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="fadein()">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="sign up.html">Sign Up</a>
+                </li>    
+                </ul>
+            </div>  
+        </nav>
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
@@ -261,6 +291,7 @@
         <!-- Footer -->
         </div>
         <script src="../js/login.js"></script>
+        <script src="../js/header.js"></script>
     </body>
     
 </html>
