--- a/website/contact us.html
+++ b/website/contact us.html
@@ -132,6 +132,36 @@
         <img class="blob4"src="Blue.svg"></img>
         <img class="blob3"src="yellow.svg"></img>
         <img class="blob5"src="Blue.svg"></img>
+        <nav class="navbar navbar-expand-md bg-custom navbar-dark">
+            <!-- Burger Menu Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Search Bar -->
+            <form class="form-inline mr-auto">
+                <div class="md-form my-0 header-search">
+                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                    <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
+                </div>
+            </form>
+            <!-- Login & Signup Buttons -->
+            <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
+            <a class="navbar-brand" href="sign up.html">Sign Up</a>
+            <!-- Burger Menu Links -->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="fadein()">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="sign up.html">Sign Up</a>
+                </li>    
+                </ul>
+            </div>  
+        </nav>
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
@@ -325,6 +355,7 @@
         <!-- Footer -->
         </div>
         <script src="js/login.js"></script>
+        <script src="js/header.js"></script>
     </body>
     
 </html>
