--- a/website/home.html
+++ b/website/home.html
@@ -31,6 +31,7 @@
   <link rel="stylesheet" href="css/stylebody.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="css/imagehover.min.css">
+  <link rel="stylesheet" href="css/stylesignup.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
