--- a/website/home.html
+++ b/website/home.html
@@ -237,8 +237,8 @@
   border-radius: 50%;
 }
     @media(max-width: 768px) and (min-width: 540px) {
-      .container-fluid{
-        margin-left: 75px;
+      .container-fluid,.body{
+        margin-left: 0px;
       }
       .active1{
         margin-bottom: 70px;
@@ -259,6 +259,9 @@
     #cd2{
       display:none;
     }
+    #fourth{
+        display: none;
+      }
     }
     @media(max-width: 540px){
       #fourth{
@@ -863,7 +866,7 @@ body {
                                   </div>
                                 </div>
                               </div>
-                              <div id="fourth" class="col-md-6 col-lg-3 col-6">
+                              <div id="fourth" class="col-md-6 col-lg-3 col-12">
                                 <div class="card bg-light" data-aos="zoom-in-down">
                                         <figure class="imghvr-shutter-out-diag-1">
                                                 <img class="card-img-top" src="photos/impression.jpg" alt="Card image cap">
