--- a/website/home.html
+++ b/website/home.html
@@ -993,7 +993,7 @@
                   </div>
                   <div class="fabs">
                     <div id="fabs1" class="fab"></div>
-                    <i id="id1" class="avatar zmdi zmdi-account"><img id="profile" src="photos/jh.png"></img></i>
+                    <i id="id1" class="avatar zmdi zmdi-account"><img id="profile" src="photos/fspic.png"></img></i>
                   </div>
                   <div class="user">
                     <div class="socials">
@@ -1035,7 +1035,7 @@
                   </div>
                   <div class="fabs">
                     <div id="fabs2" class="fab"></div>
-                    <i id="id2" class="avatar zmdi zmdi-account"><img id="profile" src="photos/jk.png"></img></i>
+                    <i id="id2" class="avatar zmdi zmdi-account"><img id="profile" src="photos/fa.png"></img></i>
                   </div>
                   <div class="user">
                     <div class="socials">
@@ -1077,7 +1077,7 @@
                   </div>
                   <div class="fabs">
                     <div id="fabs3" class="fab"></div>
-                    <i id="id3" class="avatar zmdi zmdi-account"><img id="profile" src="photos/rm.png"></img></i>
+                    <i id="id3" class="avatar zmdi zmdi-account"><img id="profile" src="photos/pb.png"></img></i>
                   </div>
                   <div class="user">
                     <div class="socials">
