--- a/website/home.html
+++ b/website/home.html
@@ -316,6 +316,15 @@
     margin-left: 111px;
 }
     }
+
+    @media(max-width: 411px){
+      .bg-light{
+      left:-7%;
+      width: 300px;
+      height: 415px;
+    }
+  
+    }
   
     @import url(https://zavoloklom.github.io/material-design-iconic-font/css/docs.md-iconic-font.min.css);
 body {
