--- a/website/popular-art.html
+++ b/website/popular-art.html
@@ -671,9 +671,9 @@ body {
 <body>
     
     <!-- <img id="blob1"class="img-responsive"src="http://sweet.io/bg-bubble__title.91def0c97d89d0548ee4.svg"></img> -->
-   <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <!--Pictures-->
-        <!-- <div class="carousel-inner">
+        <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100 picture-1" alt="">
             </div>
@@ -684,7 +684,7 @@ body {
                 <img class="d-block w-100 picture-3" alt="">
             </div> -->
             <!--Buttons-->
-            <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
@@ -693,7 +693,7 @@ body {
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div> -->
+    </div> 
     <nav class="navbar navbar-expand-md bg-custom navbar-dark">
         <!-- Burger Menu Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
