--- a/website/about/about us.html
+++ b/website/about/about us.html
@@ -8,6 +8,7 @@
         <script src="../jquery/jquery-3.4.1.min.js"></script>
         <!-- Bootstrap CSS -->
         <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
         <!-- Fonts -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -85,7 +86,7 @@
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-md bg-custom navbar-dark">
+        <nav class="navbar bg-custom navbar-dark">
             <!-- Burger Menu Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -94,8 +95,8 @@
             <form class="form-inline mr-auto">
                 <div class="md-form my-0 header-search">
                     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                    <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
                 </div>
+                <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
             </form>
             <!-- Login & Signup Buttons -->
             <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
