--- a/website/contact us.html
+++ b/website/contact us.html
@@ -8,6 +8,7 @@
         <script src="jquery/jquery-3.4.1.min.js"></script>
         <!-- Bootstrap CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <script src="bootstrap/js/bootstrap.min.js"></script>
         <!-- Fonts -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
@@ -132,7 +133,7 @@
         <img class="blob4"src="Blue.svg"></img>
         <img class="blob3"src="yellow.svg"></img>
         <img class="blob5"src="Blue.svg"></img>
-        <nav class="navbar navbar-expand-md bg-custom navbar-dark">
+        <nav class="navbar bg-custom navbar-dark">
             <!-- Burger Menu Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -141,8 +142,8 @@
             <form class="form-inline mr-auto">
                 <div class="md-form my-0 header-search">
                     <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                    <button onclick="search()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
                 </div>
+                <button class="header-nav-searchButton" onclick="searchBar()"><i class="fas fa-search text-white" aria-hidden="true"></i></button>
             </form>
             <!-- Login & Signup Buttons -->
             <a class="navbar-brand" href="#" onclick="fadein()">Login</a>
@@ -161,7 +162,7 @@
                 </li>    
                 </ul>
             </div>  
-        </nav>
+        </nav>        
         <div class="flex">
             <nav id="sidebar">
                 <ul class="list-unstyled components">
